--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -1,4 +1,3 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -10,90 +9,105 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet library="css" name="default.css"/>
         <h:outputStylesheet library="css" name="cssLayout.css"/>
-        <title>Hospital Statistics</title>
+        <title><ui:insert name="title">Default Title</ui:insert></title>
     </h:head>
 
-    <h:body>
+    <h:body >
 
-        <f:view locale="#{languageController.language}" >
+        <p:layout fullPage="true" >
 
-            <div id="top" style=" height: 40px;">
-                <ui:insert name="top">
-                    <div style="float: left; width: 100px;" >
-                        <h:form >
-                            <table >
-                                <tr>
-                                    <td>
-                                        <h:commandLink value="#{bundle.sinhala}" action="#{languageController.makeLanguageSinhala()}" rendered="#{languageController.language ne 'si'}" ></h:commandLink>
-                                    </td>
-                                    <td>
-                                        <h:outputLabel value="|"  rendered="#{languageController.language eq 'en'}"></h:outputLabel>
-                                    </td>
-                                    <td>
-                                        <h:commandLink value="#{bundle.tamil}" action="#{languageController.makeLanguageTamil()}" rendered="#{languageController.language ne 'ta'}"></h:commandLink>
-                                    </td>
-                                    <td>
-                                        <h:outputLabel value="|"  rendered="#{languageController.language ne 'en'}"></h:outputLabel>
-                                    </td>
-                                    <td>
-                                        <h:commandLink value="#{bundle.english}" action="#{languageController.makeLanguageEnglish()}" rendered="#{languageController.language ne 'en'}"></h:commandLink>
-                                    </td>
-                                </tr>
-                            </table>
-                        </h:form>
-                    </div>
+            <p:growl id="growl" autoUpdate="true" ></p:growl>
+            <f:view locale="en"  >
 
-                    <div style="float: right; width: 100px;" >
-                        Login
-                    </div>
-                    <div style="margin: 0 auto; ">
-                        Hospital Statistics
-                    </div>
-                </ui:insert>
-            </div>
-            <div>
-                <div id="left">
+                <p:layoutUnit position="north" resizable="true" size="100" minSize="40" maxSize="200">
+                    <ui:insert name="top">
+
+                        <table width="100%" >
+                            <tr>
+                                <td>
+                                    <h:form >
+                                        <table >
+                                            <tr>
+                                                <td>
+                                                    <h:commandLink value="#{bundle.sinhala}" action="#{languageController.makeLanguageSinhala()}" rendered="#{languageController.language ne 'si'}" ></h:commandLink>
+                                                </td>
+                                                <td>
+                                                    <h:outputLabel value="|"  rendered="#{languageController.language eq 'en'}"></h:outputLabel>
+                                                </td>
+                                                <td>
+                                                    <h:commandLink value="#{bundle.tamil}" action="#{languageController.makeLanguageTamil()}" rendered="#{languageController.language ne 'ta'}"></h:commandLink>
+                                                </td>
+                                                <td>
+                                                    <h:outputLabel value="|"  rendered="#{languageController.language ne 'en'}"></h:outputLabel>
+                                                </td>
+                                                <td>
+                                                    <h:commandLink value="#{bundle.english}" action="#{languageController.makeLanguageEnglish()}" rendered="#{languageController.language ne 'en'}"></h:commandLink>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </h:form>
+                                </td>
+                                <td>
+                                    <h1><p:outputLabel value="#{bundle.AppName}" ></p:outputLabel> </h1>
+                                </td>
+                                <td>
+                                    Login
+                                </td>
+                            </tr>
+                        </table>
+                    </ui:insert>
+                </p:layoutUnit>
+
+                <p:layoutUnit position="west" >
                     <ui:insert name="left">
                         <h:form >
-
-                            <p:menu >
-
+                            <p:commandLink ajax="false" 
+                                           action="#{personController.registerNewUserStart()}" 
+                                           value="Register New Institution" ></p:commandLink>
+                            <p:menu rendered="#{personController.loggable}" >
                                 <p:menuitem value="Reports" ></p:menuitem>
-
                                 <p:menuitem value="Data Entry" ></p:menuitem>
-
                                 <p:submenu label="Admin" >
                                     <p:menuitem value="System Administration" action="admin_index.xhtml" ajax="false" ></p:menuitem>
                                 </p:submenu>
                             </p:menu>
 
-                            
-                            <p:commandLink ajax="false" action="admin_index" value="Admin" ></p:commandLink>
-                            
+
+
+
                         </h:form>
 
                     </ui:insert>
-                </div>
-                <div>
-                    <div id="right">
-                        <ui:insert name="right">
-                            <h:panelGroup >
+                </p:layoutUnit>
+
+                <p:layoutUnit position="east">
+                    <ui:insert name="right">
+                        <h:panelGroup >
+                            <h:form >
                                 <h:panelGroup rendered="#{personController.loggedUser ne null}" >
                                     <p:commandLink ajax="false" action="#{personController.logOut()}" value="Log Out"></p:commandLink>
                                 </h:panelGroup>
-                            </h:panelGroup>
-                        </ui:insert>
-                    </div>
-                    <div id="content" class="right_content">
-                        <ui:insert name="content">Content</ui:insert>
-                    </div>
-                </div>
-            </div>
-            <div id="bottom">
-                <ui:insert name="bottom">&copy; Health Information Unit, Department of Health Services, Southern Province, Sri Lanka</ui:insert>
-            </div>
+                            </h:form>
+                        </h:panelGroup>
+                    </ui:insert>
+                </p:layoutUnit>
 
-        </f:view>
+                <p:layoutUnit position="center">
+                    <ui:insert name="content">Content</ui:insert>
+
+                </p:layoutUnit>
+
+                <p:layoutUnit position="south">
+                    <ui:insert name="bottom">&copy; Health Information Unit, Department of Health Services, Southern Province, Sri Lanka</ui:insert>
+                </p:layoutUnit>
+
+
+
+
+
+            </f:view>
+
+        </p:layout>
     </h:body>
 
 </html>
