--- a/src/main/webapp/edits/institution/Create.xhtml
+++ b/src/main/webapp/edits/institution/Create.xhtml
@@ -3,43 +3,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.CreateInstitutionTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{institutionController.selected.id}" title="#{bundle.CreateInstitutionTitle_id}" />
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{institutionController.selected.sname}" title="#{bundle.CreateInstitutionTitle_sname}" />
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{institutionController.selected.tname}" title="#{bundle.CreateInstitutionTitle_tname}" />
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{institutionController.selected.ename}" title="#{bundle.CreateInstitutionTitle_ename}" />
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_type}" for="type" />
-                    <h:inputText id="type" value="#{institutionController.selected.type}" title="#{bundle.CreateInstitutionTitle_type}" />
-                    <h:outputLabel value="#{bundle.CreateInstitutionLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{institutionController.selected.parent}" title="#{bundle.CreateInstitutionTitle_parent}" >
-                        <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{institutionController.create}" value="#{bundle.CreateInstitutionSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{institutionController.prepareList}" value="#{bundle.CreateInstitutionShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.CreateInstitutionIndexLink}"/>
+    <ui:composition>
+
+        <p:dialog id="InstitutionCreateDlg" widgetVar="InstitutionCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateInstitutionTitle}">
+            <h:form id="InstitutionCreateForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{institutionController.selected != null}">
+                        <p:outputLabel value="#{bundle.sname}" for="sname" />
+                        <p:inputText id="sname" value="#{institutionController.selected.sname}" title="#{bundle.CreateInstitutionTitle_sname}" />
+                        <p:outputLabel value="#{bundle.tname}" for="tname" />
+                        <p:inputText id="tname" value="#{institutionController.selected.tname}" title="#{bundle.CreateInstitutionTitle_tname}" />
+                        <p:outputLabel value="#{bundle.ename}" for="ename" />
+                        <p:inputText id="ename" value="#{institutionController.selected.ename}" title="#{bundle.CreateInstitutionTitle_ename}" />
+                        <p:outputLabel value="#{bundle.type}" for="type" />
+                        <p:inputText id="type" value="#{institutionController.selected.type}" title="#{bundle.CreateInstitutionTitle_type}" />
+                        <p:outputLabel value="#{bundle.CreateInstitutionLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{institutionController.selected.parent}" >
+                            <f:selectItems rendered="#{languageController.language eq 'si'}" value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="parentItemS"
+                                           itemValue="#{parentItemS}" itemLabel="#{parentItemS.sname}"/>
+                            <f:selectItems rendered="#{languageController.language eq 'ta'}" value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="parentItemT"
+                                           itemValue="#{parentItemT}" itemLabel="#{parentItemT.tname}"/>
+                            <f:selectItems rendered="#{languageController.language eq 'en'}" value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}" itemLabel="#{parentItem.ename}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{institutionController.create}" value="#{bundle.Save}" update="display,:InstitutionListForm:datalist,:growl" oncomplete="handleSubmit(args,'InstitutionCreateDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="InstitutionCreateDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
