--- a/src/main/webapp/edits/institution/Edit.xhtml
+++ b/src/main/webapp/edits/institution/Edit.xhtml
@@ -3,44 +3,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditInstitutionTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{institutionController.selected.id}" title="#{bundle.EditInstitutionTitle_id}" />
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{institutionController.selected.sname}" title="#{bundle.EditInstitutionTitle_sname}" />
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{institutionController.selected.tname}" title="#{bundle.EditInstitutionTitle_tname}" />
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{institutionController.selected.ename}" title="#{bundle.EditInstitutionTitle_ename}" />
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_type}" for="type" />
-                    <h:inputText id="type" value="#{institutionController.selected.type}" title="#{bundle.EditInstitutionTitle_type}" />
-                    <h:outputLabel value="#{bundle.EditInstitutionLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{institutionController.selected.parent}" title="#{bundle.EditInstitutionTitle_parent}" >
-                        <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <h:commandLink action="#{institutionController.update}" value="#{bundle.EditInstitutionSaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditInstitutionViewLink}"/>
-                <br />
-                <h:commandLink action="#{institutionController.prepareList}" value="#{bundle.EditInstitutionShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditInstitutionIndexLink}" />
+    <ui:composition>
+
+        <p:dialog id="InstitutionEditDlg" widgetVar="InstitutionEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditInstitutionTitle}">
+            <h:form id="InstitutionEditForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{institutionController.selected != null}">
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{institutionController.selected.id}" title="#{bundle.EditInstitutionTitle_id}" />
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{institutionController.selected.sname}" title="#{bundle.EditInstitutionTitle_sname}" />
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{institutionController.selected.tname}" title="#{bundle.EditInstitutionTitle_tname}" />
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{institutionController.selected.ename}" title="#{bundle.EditInstitutionTitle_ename}" />
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_type}" for="type" />
+                        <p:inputText id="type" value="#{institutionController.selected.type}" title="#{bundle.EditInstitutionTitle_type}" />
+                        <p:outputLabel value="#{bundle.EditInstitutionLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{institutionController.selected.parent}" >
+                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
+                            <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{institutionController.update}" value="#{bundle.Save}" update="display,:InstitutionListForm:datalist,:growl" oncomplete="handleSubmit(args, 'InstitutionEditDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="InstitutionEditDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
