--- a/src/main/webapp/edits/institution/View.xhtml
+++ b/src/main/webapp/edits/institution/View.xhtml
@@ -3,46 +3,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ViewInstitutionTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_id}"/>
-                    <h:outputText value="#{institutionController.selected.id}" title="#{bundle.ViewInstitutionTitle_id}"/>
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_sname}"/>
-                    <h:outputText value="#{institutionController.selected.sname}" title="#{bundle.ViewInstitutionTitle_sname}"/>
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_tname}"/>
-                    <h:outputText value="#{institutionController.selected.tname}" title="#{bundle.ViewInstitutionTitle_tname}"/>
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_ename}"/>
-                    <h:outputText value="#{institutionController.selected.ename}" title="#{bundle.ViewInstitutionTitle_ename}"/>
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_type}"/>
-                    <h:outputText value="#{institutionController.selected.type}" title="#{bundle.ViewInstitutionTitle_type}"/>
-                    <h:outputText value="#{bundle.ViewInstitutionLabel_parent}"/>
-                    <h:outputText value="#{institutionController.selected.parent}" title="#{bundle.ViewInstitutionTitle_parent}"/>
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{institutionController.destroyAndView}" value="#{bundle.ViewInstitutionDestroyLink}"/>
-                <br />
-                <br />
-                <h:link outcome="Edit" value="#{bundle.ViewInstitutionEditLink}"/>
-                <br />
-                <h:commandLink action="#{institutionController.prepareCreate}" value="#{bundle.ViewInstitutionCreateLink}" />
-                <br />
-                <h:commandLink action="#{institutionController.prepareList}" value="#{bundle.ViewInstitutionShowAllLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ViewInstitutionIndexLink}"/>
+    <ui:composition>
 
+        <p:dialog id="InstitutionViewDlg" widgetVar="InstitutionViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewInstitutionTitle}">
+            <h:form id="InstitutionViewForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{institutionController.selected != null}">
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_id}"/>
+                        <h:outputText value="#{institutionController.selected.id}" title="#{bundle.ViewInstitutionTitle_id}"/>
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_sname}"/>
+                        <h:outputText value="#{institutionController.selected.sname}" title="#{bundle.ViewInstitutionTitle_sname}"/>
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_tname}"/>
+                        <h:outputText value="#{institutionController.selected.tname}" title="#{bundle.ViewInstitutionTitle_tname}"/>
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_ename}"/>
+                        <h:outputText value="#{institutionController.selected.ename}" title="#{bundle.ViewInstitutionTitle_ename}"/>
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_type}"/>
+                        <h:outputText value="#{institutionController.selected.type}" title="#{bundle.ViewInstitutionTitle_type}"/>
+                        <h:outputText value="#{bundle.ViewInstitutionLabel_parent}"/>
+                        <h:outputText value="#{institutionController.selected.parent}" title="#{bundle.ViewInstitutionTitle_parent}"/>
+                    </p:panelGrid>
+                    <p:commandButton value="#{bundle.Close}" onclick="InstitutionViewDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
