--- a/src/main/webapp/edits/person/Create.xhtml
+++ b/src/main/webapp/edits/person/Create.xhtml
@@ -3,51 +3,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.CreatePersonTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{personController.selected.sname}" title="#{bundle.CreatePersonTitle_sname}" />
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{personController.selected.tname}" title="#{bundle.CreatePersonTitle_tname}" />
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{personController.selected.ename}" title="#{bundle.CreatePersonTitle_ename}" />
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_type}" for="type" />
-                    <h:inputText id="type" value="#{personController.selected.type}" title="#{bundle.CreatePersonTitle_type}" />
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_userName}" for="userName" />
-                    <h:inputText id="userName" value="#{personController.selected.userName}" title="#{bundle.CreatePersonTitle_userName}" required="true" requiredMessage="#{bundle.CreatePersonRequiredMessage_userName}"/>
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_password}" for="password" />
-                    <h:inputTextarea rows="4" cols="30" id="password" value="#{personController.selected.password}" title="#{bundle.CreatePersonTitle_password}" />
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_speciality}" for="speciality" />
-                    <h:selectOneMenu id="speciality" value="#{personController.selected.speciality}" title="#{bundle.CreatePersonTitle_speciality}" >
-                        <f:selectItems value="#{specialityController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_unit}" for="unit" />
-                    <h:selectOneMenu id="unit" value="#{personController.selected.unit}" title="#{bundle.CreatePersonTitle_unit}" >
-                        <f:selectItems value="#{unitController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreatePersonLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{personController.selected.id}" title="#{bundle.CreatePersonTitle_id}" />
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{personController.create}" value="#{bundle.CreatePersonSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{personController.prepareList}" value="#{bundle.CreatePersonShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.CreatePersonIndexLink}"/>
+    <ui:composition>
+
+        <p:dialog id="PersonCreateDlg" widgetVar="PersonCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePersonTitle}">
+            <h:form id="PersonCreateForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{personController.selected != null}">
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_userLanguage}" for="userLanguage" />
+                        <p:inputText id="userLanguage" value="#{personController.selected.userLanguage}" title="#{bundle.CreatePersonTitle_userLanguage}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_institution}" for="institution" />
+                        <p:selectOneMenu id="institution" value="#{personController.selected.institution}" >
+                            <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="institutionItem"
+                                           itemValue="#{institutionItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_userRole}" for="userRole" />
+                        <p:inputText id="userRole" value="#{personController.selected.userRole}" title="#{bundle.CreatePersonTitle_userRole}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{personController.selected.sname}" title="#{bundle.CreatePersonTitle_sname}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{personController.selected.tname}" title="#{bundle.CreatePersonTitle_tname}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{personController.selected.ename}" title="#{bundle.CreatePersonTitle_ename}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_type}" for="type" />
+                        <p:inputText id="type" value="#{personController.selected.type}" title="#{bundle.CreatePersonTitle_type}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_userName}" for="userName" />
+                        <p:inputText id="userName" value="#{personController.selected.userName}" title="#{bundle.CreatePersonTitle_userName}" required="true" requiredMessage="#{bundle.CreatePersonRequiredMessage_userName}"/>
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_password}" for="password" />
+                        <p:inputTextarea rows="4" cols="30" id="password" value="#{personController.selected.password}" title="#{bundle.CreatePersonTitle_password}" />
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_speciality}" for="speciality" />
+                        <p:selectOneMenu id="speciality" value="#{personController.selected.speciality}" >
+                            <f:selectItems value="#{specialityController.itemsAvailableSelectOne}"
+                                           var="specialityItem"
+                                           itemValue="#{specialityItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_unit}" for="unit" />
+                        <p:selectOneMenu id="unit" value="#{personController.selected.unit}" >
+                            <f:selectItems value="#{unitController.itemsAvailableSelectOne}"
+                                           var="unitItem"
+                                           itemValue="#{unitItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreatePersonLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{personController.selected.id}" title="#{bundle.CreatePersonTitle_id}" />
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{personController.create}" value="#{bundle.Save}" update="display,:PersonListForm:datalist,:growl" oncomplete="handleSubmit(args,'PersonCreateDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="PersonCreateDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
