--- a/src/main/webapp/edits/record/Create.xhtml
+++ b/src/main/webapp/edits/record/Create.xhtml
@@ -3,85 +3,83 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.CreateRecordTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{recordController.selected.id}" title="#{bundle.CreateRecordTitle_id}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{recordController.selected.sname}" title="#{bundle.CreateRecordTitle_sname}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{recordController.selected.tname}" title="#{bundle.CreateRecordTitle_tname}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{recordController.selected.ename}" title="#{bundle.CreateRecordTitle_ename}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_type}" for="type" />
-                    <h:inputText id="type" value="#{recordController.selected.type}" title="#{bundle.CreateRecordTitle_type}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{recordController.selected.parent}" title="#{bundle.CreateRecordTitle_parent}" >
-                        <f:selectItems value="#{recordController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_recordDate}" for="recordDate" />
-                    <h:inputText id="recordDate" value="#{recordController.selected.recordDate}" title="#{bundle.CreateRecordTitle_recordDate}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy" />
-                    </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_fromDate}" for="fromDate" />
-                    <h:inputText id="fromDate" value="#{recordController.selected.fromDate}" title="#{bundle.CreateRecordTitle_fromDate}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy" />
-                    </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_toDate}" for="toDate" />
-                    <h:inputText id="toDate" value="#{recordController.selected.toDate}" title="#{bundle.CreateRecordTitle_toDate}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy" />
-                    </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_recordYear}" for="recordYear" />
-                    <h:inputText id="recordYear" value="#{recordController.selected.recordYear}" title="#{bundle.CreateRecordTitle_recordYear}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_recordMonth}" for="recordMonth" />
-                    <h:inputText id="recordMonth" value="#{recordController.selected.recordMonth}" title="#{bundle.CreateRecordTitle_recordMonth}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_recordQuarter}" for="recordQuarter" />
-                    <h:inputText id="recordQuarter" value="#{recordController.selected.recordQuarter}" title="#{bundle.CreateRecordTitle_recordQuarter}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_institution}" for="institution" />
-                    <h:selectOneMenu id="institution" value="#{recordController.selected.institution}" title="#{bundle.CreateRecordTitle_institution}" >
-                        <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_person}" for="person" />
-                    <h:selectOneMenu id="person" value="#{recordController.selected.person}" title="#{bundle.CreateRecordTitle_person}" >
-                        <f:selectItems value="#{personController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_unit}" for="unit" />
-                    <h:selectOneMenu id="unit" value="#{recordController.selected.unit}" title="#{bundle.CreateRecordTitle_unit}" >
-                        <f:selectItems value="#{unitController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_ward}" for="ward" />
-                    <h:selectOneMenu id="ward" value="#{recordController.selected.ward}" title="#{bundle.CreateRecordTitle_ward}" >
-                        <f:selectItems value="#{wardController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_category}" for="category" />
-                    <h:selectOneMenu id="category" value="#{recordController.selected.category}" title="#{bundle.CreateRecordTitle_category}" >
-                        <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_recordValue}" for="recordValue" />
-                    <h:inputText id="recordValue" value="#{recordController.selected.recordValue}" title="#{bundle.CreateRecordTitle_recordValue}" />
-                    <h:outputLabel value="#{bundle.CreateRecordLabel_comments}" for="comments" />
-                    <h:inputTextarea rows="4" cols="30" id="comments" value="#{recordController.selected.comments}" title="#{bundle.CreateRecordTitle_comments}" />
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{recordController.create}" value="#{bundle.CreateRecordSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{recordController.prepareList}" value="#{bundle.CreateRecordShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.CreateRecordIndexLink}"/>
+    <ui:composition>
+
+        <p:dialog id="RecordCreateDlg" widgetVar="RecordCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateRecordTitle}">
+            <h:form id="RecordCreateForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{recordController.selected != null}">
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{recordController.selected.id}" title="#{bundle.CreateRecordTitle_id}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{recordController.selected.sname}" title="#{bundle.CreateRecordTitle_sname}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{recordController.selected.tname}" title="#{bundle.CreateRecordTitle_tname}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{recordController.selected.ename}" title="#{bundle.CreateRecordTitle_ename}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_type}" for="type" />
+                        <p:inputText id="type" value="#{recordController.selected.type}" title="#{bundle.CreateRecordTitle_type}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{recordController.selected.parent}" >
+                            <f:selectItems value="#{recordController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_recordDate}" for="recordDate" />
+                        <p:calendar id="recordDate" pattern="MM/dd/yyyy" value="#{recordController.selected.recordDate}" title="#{bundle.EditRecordTitle_recordDate}"  showOn="button"/>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_fromDate}" for="fromDate" />
+                        <p:calendar id="fromDate" pattern="MM/dd/yyyy" value="#{recordController.selected.fromDate}" title="#{bundle.EditRecordTitle_fromDate}"  showOn="button"/>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_toDate}" for="toDate" />
+                        <p:calendar id="toDate" pattern="MM/dd/yyyy" value="#{recordController.selected.toDate}" title="#{bundle.EditRecordTitle_toDate}"  showOn="button"/>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_recordYear}" for="recordYear" />
+                        <p:inputText id="recordYear" value="#{recordController.selected.recordYear}" title="#{bundle.CreateRecordTitle_recordYear}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_recordMonth}" for="recordMonth" />
+                        <p:inputText id="recordMonth" value="#{recordController.selected.recordMonth}" title="#{bundle.CreateRecordTitle_recordMonth}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_recordQuarter}" for="recordQuarter" />
+                        <p:inputText id="recordQuarter" value="#{recordController.selected.recordQuarter}" title="#{bundle.CreateRecordTitle_recordQuarter}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_institution}" for="institution" />
+                        <p:selectOneMenu id="institution" value="#{recordController.selected.institution}" >
+                            <f:selectItems value="#{institutionController.itemsAvailableSelectOne}"
+                                           var="institutionItem"
+                                           itemValue="#{institutionItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_person}" for="person" />
+                        <p:selectOneMenu id="person" value="#{recordController.selected.person}" >
+                            <f:selectItems value="#{personController.itemsAvailableSelectOne}"
+                                           var="personItem"
+                                           itemValue="#{personItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_unit}" for="unit" />
+                        <p:selectOneMenu id="unit" value="#{recordController.selected.unit}" >
+                            <f:selectItems value="#{unitController.itemsAvailableSelectOne}"
+                                           var="unitItem"
+                                           itemValue="#{unitItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_ward}" for="ward" />
+                        <p:selectOneMenu id="ward" value="#{recordController.selected.ward}" >
+                            <f:selectItems value="#{wardController.itemsAvailableSelectOne}"
+                                           var="wardItem"
+                                           itemValue="#{wardItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_category}" for="category" />
+                        <p:selectOneMenu id="category" value="#{recordController.selected.category}" >
+                            <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"
+                                           var="categoryItem"
+                                           itemValue="#{categoryItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_recordValue}" for="recordValue" />
+                        <p:inputText id="recordValue" value="#{recordController.selected.recordValue}" title="#{bundle.CreateRecordTitle_recordValue}" />
+                        <p:outputLabel value="#{bundle.CreateRecordLabel_comments}" for="comments" />
+                        <p:inputTextarea rows="4" cols="30" id="comments" value="#{recordController.selected.comments}" title="#{bundle.CreateRecordTitle_comments}" />
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{recordController.create}" value="#{bundle.Save}" update="display,:RecordListForm:datalist,:growl" oncomplete="handleSubmit(args,'RecordCreateDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="RecordCreateDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
