--- a/src/main/webapp/edits/speciality/Edit.xhtml
+++ b/src/main/webapp/edits/speciality/Edit.xhtml
@@ -3,46 +3,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditSpecialityTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{specialityController.selected.id}" title="#{bundle.EditSpecialityTitle_id}" />
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{specialityController.selected.sname}" title="#{bundle.EditSpecialityTitle_sname}" />
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{specialityController.selected.tname}" title="#{bundle.EditSpecialityTitle_tname}" />
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{specialityController.selected.ename}" title="#{bundle.EditSpecialityTitle_ename}" />
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_category}" for="category" />
-                    <h:selectOneMenu id="category" value="#{specialityController.selected.category}" title="#{bundle.EditSpecialityTitle_category}" >
-                        <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.EditSpecialityLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{specialityController.selected.parent}" title="#{bundle.EditSpecialityTitle_parent}" >
-                        <f:selectItems value="#{specialityController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <h:commandLink action="#{specialityController.update}" value="#{bundle.EditSpecialitySaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditSpecialityViewLink}"/>
-                <br />
-                <h:commandLink action="#{specialityController.prepareList}" value="#{bundle.EditSpecialityShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditSpecialityIndexLink}" />
+    <ui:composition>
+
+        <p:dialog id="SpecialityEditDlg" widgetVar="SpecialityEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditSpecialityTitle}">
+            <h:form id="SpecialityEditForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{specialityController.selected != null}">
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{specialityController.selected.id}" title="#{bundle.EditSpecialityTitle_id}" />
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{specialityController.selected.sname}" title="#{bundle.EditSpecialityTitle_sname}" />
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{specialityController.selected.tname}" title="#{bundle.EditSpecialityTitle_tname}" />
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{specialityController.selected.ename}" title="#{bundle.EditSpecialityTitle_ename}" />
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_category}" for="category" />
+                        <p:selectOneMenu id="category" value="#{specialityController.selected.category}" >
+                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
+                            <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"
+                                           var="categoryItem"
+                                           itemValue="#{categoryItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.EditSpecialityLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{specialityController.selected.parent}" >
+                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
+                            <f:selectItems value="#{specialityController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{specialityController.update}" value="#{bundle.Save}" update="display,:SpecialityListForm:datalist,:growl" oncomplete="handleSubmit(args, 'SpecialityEditDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="SpecialityEditDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
