--- a/src/main/webapp/edits/unit/Create.xhtml
+++ b/src/main/webapp/edits/unit/Create.xhtml
@@ -3,47 +3,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.CreateUnitTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{unitController.selected.id}" title="#{bundle.CreateUnitTitle_id}" />
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{unitController.selected.parent}" title="#{bundle.CreateUnitTitle_parent}" >
-                        <f:selectItems value="#{unitController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{unitController.selected.sname}" title="#{bundle.CreateUnitTitle_sname}" />
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{unitController.selected.tname}" title="#{bundle.CreateUnitTitle_tname}" />
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{unitController.selected.ename}" title="#{bundle.CreateUnitTitle_ename}" />
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_type}" for="type" />
-                    <h:inputText id="type" value="#{unitController.selected.type}" title="#{bundle.CreateUnitTitle_type}" />
-                    <h:outputLabel value="#{bundle.CreateUnitLabel_category}" for="category" />
-                    <h:selectOneMenu id="category" value="#{unitController.selected.category}" title="#{bundle.CreateUnitTitle_category}" >
-                        <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{unitController.create}" value="#{bundle.CreateUnitSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{unitController.prepareList}" value="#{bundle.CreateUnitShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.CreateUnitIndexLink}"/>
+    <ui:composition>
+
+        <p:dialog id="UnitCreateDlg" widgetVar="UnitCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateUnitTitle}">
+            <h:form id="UnitCreateForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{unitController.selected != null}">
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{unitController.selected.id}" title="#{bundle.CreateUnitTitle_id}" />
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{unitController.selected.parent}" >
+                            <f:selectItems value="#{unitController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{unitController.selected.sname}" title="#{bundle.CreateUnitTitle_sname}" />
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{unitController.selected.tname}" title="#{bundle.CreateUnitTitle_tname}" />
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{unitController.selected.ename}" title="#{bundle.CreateUnitTitle_ename}" />
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_type}" for="type" />
+                        <p:inputText id="type" value="#{unitController.selected.type}" title="#{bundle.CreateUnitTitle_type}" />
+                        <p:outputLabel value="#{bundle.CreateUnitLabel_category}" for="category" />
+                        <p:selectOneMenu id="category" value="#{unitController.selected.category}" >
+                            <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"
+                                           var="categoryItem"
+                                           itemValue="#{categoryItem}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{unitController.create}" value="#{bundle.Save}" update="display,:UnitListForm:datalist,:growl" oncomplete="handleSubmit(args,'UnitCreateDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="UnitCreateDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
