--- a/src/main/webapp/edits/unit/List.xhtml
+++ b/src/main/webapp/edits/unit/List.xhtml
@@ -3,83 +3,85 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
+    <ui:composition template="/template.xhtml">
+
+
         <ui:define name="title">
             <h:outputText value="#{bundle.ListUnitTitle}"></h:outputText>
         </ui:define>
+
         <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:outputText escape="false" value="#{bundle.ListUnitEmpty}" rendered="#{unitController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{unitController.items.rowCount > 0}">
-                    <h:outputText value="#{unitController.pagination.pageFirstItem + 1}..#{unitController.pagination.pageLastItem + 1}/#{unitController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{unitController.previous}" value="#{bundle.Previous} #{unitController.pagination.pageSize}" rendered="#{unitController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{unitController.next}" value="#{bundle.Next} #{unitController.pagination.pageSize}" rendered="#{unitController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{unitController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
+            <h:form id="UnitListForm">
+                <p:panel header="#{bundle.ListUnitTitle}">
+                    <p:dataTable id="datalist" value="#{unitController.items}" var="item"
+                                 selectionMode="single" selection="#{unitController.selected}"
+                                 paginator="true"
+                                 rowKey="#{item.id}"
+                                 rows="10"
+                                 rowsPerPageTemplate="10,20,30,40,50"
+                                 >
+
+                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
+                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_id}"/>
                             </f:facet>
                             <h:outputText value="#{item.id}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_parent}"/>
                             </f:facet>
                             <h:outputText value="#{item.parent}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_sname}"/>
                             </f:facet>
                             <h:outputText value="#{item.sname}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_tname}"/>
                             </f:facet>
                             <h:outputText value="#{item.tname}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_ename}"/>
                             </f:facet>
                             <h:outputText value="#{item.ename}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_type}"/>
                             </f:facet>
                             <h:outputText value="#{item.type}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListUnitTitle_category}"/>
                             </f:facet>
                             <h:outputText value="#{item.category}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandLink action="#{unitController.prepareView}" value="#{bundle.ListUnitViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{unitController.prepareEdit}" value="#{bundle.ListUnitEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{unitController.destroy}" value="#{bundle.ListUnitDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGroup>
-                <br />
-                <h:commandLink action="#{unitController.prepareCreate}" value="#{bundle.ListUnitCreateLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ListUnitIndexLink}"/>
+                        </p:column>
+                        <f:facet name="footer">
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{unitController.prepareCreate}" update=":UnitCreateForm" oncomplete="PF('UnitCreateDialog').show()"/>
+                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":UnitViewForm" oncomplete="PF('UnitViewDialog').show()" disabled="#{empty unitController.selected}"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":UnitEditForm" oncomplete="PF('UnitEditDialog').show()" disabled="#{empty unitController.selected}"/>
+                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{unitController.destroy}" update=":growl,datalist" disabled="#{empty unitController.selected}"/>
+                        </f:facet>
+                    </p:dataTable>
+                </p:panel>
             </h:form>
+
+            <ui:include src="Create.xhtml"/>
+            <ui:include src="Edit.xhtml"/>
+            <ui:include src="View.xhtml"/>
         </ui:define>
     </ui:composition>
 
