--- a/src/main/webapp/edits/ward/Edit.xhtml
+++ b/src/main/webapp/edits/ward/Edit.xhtml
@@ -3,46 +3,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditWardTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditWardLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{wardController.selected.id}" title="#{bundle.EditWardTitle_id}" />
-                    <h:outputLabel value="#{bundle.EditWardLabel_sname}" for="sname" />
-                    <h:inputText id="sname" value="#{wardController.selected.sname}" title="#{bundle.EditWardTitle_sname}" />
-                    <h:outputLabel value="#{bundle.EditWardLabel_tname}" for="tname" />
-                    <h:inputText id="tname" value="#{wardController.selected.tname}" title="#{bundle.EditWardTitle_tname}" />
-                    <h:outputLabel value="#{bundle.EditWardLabel_ename}" for="ename" />
-                    <h:inputText id="ename" value="#{wardController.selected.ename}" title="#{bundle.EditWardTitle_ename}" />
-                    <h:outputLabel value="#{bundle.EditWardLabel_category}" for="category" />
-                    <h:selectOneMenu id="category" value="#{wardController.selected.category}" title="#{bundle.EditWardTitle_category}" >
-                        <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.EditWardLabel_parent}" for="parent" />
-                    <h:selectOneMenu id="parent" value="#{wardController.selected.parent}" title="#{bundle.EditWardTitle_parent}" >
-                        <f:selectItems value="#{wardController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <h:commandLink action="#{wardController.update}" value="#{bundle.EditWardSaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditWardViewLink}"/>
-                <br />
-                <h:commandLink action="#{wardController.prepareList}" value="#{bundle.EditWardShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditWardIndexLink}" />
+    <ui:composition>
+
+        <p:dialog id="WardEditDlg" widgetVar="WardEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditWardTitle}">
+            <h:form id="WardEditForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{wardController.selected != null}">
+                        <p:outputLabel value="#{bundle.EditWardLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{wardController.selected.id}" title="#{bundle.EditWardTitle_id}" />
+                        <p:outputLabel value="#{bundle.EditWardLabel_sname}" for="sname" />
+                        <p:inputText id="sname" value="#{wardController.selected.sname}" title="#{bundle.EditWardTitle_sname}" />
+                        <p:outputLabel value="#{bundle.EditWardLabel_tname}" for="tname" />
+                        <p:inputText id="tname" value="#{wardController.selected.tname}" title="#{bundle.EditWardTitle_tname}" />
+                        <p:outputLabel value="#{bundle.EditWardLabel_ename}" for="ename" />
+                        <p:inputText id="ename" value="#{wardController.selected.ename}" title="#{bundle.EditWardTitle_ename}" />
+                        <p:outputLabel value="#{bundle.EditWardLabel_category}" for="category" />
+                        <p:selectOneMenu id="category" value="#{wardController.selected.category}" >
+                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
+                            <f:selectItems value="#{categoryController.itemsAvailableSelectOne}"
+                                           var="categoryItem"
+                                           itemValue="#{categoryItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.EditWardLabel_parent}" for="parent" />
+                        <p:selectOneMenu id="parent" value="#{wardController.selected.parent}" >
+                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
+                            <f:selectItems value="#{wardController.itemsAvailableSelectOne}"
+                                           var="parentItem"
+                                           itemValue="#{parentItem}"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:commandButton actionListener="#{wardController.update}" value="#{bundle.Save}" update="display,:WardListForm:datalist,:growl" oncomplete="handleSubmit(args, 'WardEditDialog');"/>
+                    <p:commandButton value="#{bundle.Cancel}" onclick="WardEditDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
