--- a/src/main/webapp/edits/ward/View.xhtml
+++ b/src/main/webapp/edits/ward/View.xhtml
@@ -3,46 +3,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template1.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ViewWardTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="#{bundle.ViewWardLabel_id}"/>
-                    <h:outputText value="#{wardController.selected.id}" title="#{bundle.ViewWardTitle_id}"/>
-                    <h:outputText value="#{bundle.ViewWardLabel_sname}"/>
-                    <h:outputText value="#{wardController.selected.sname}" title="#{bundle.ViewWardTitle_sname}"/>
-                    <h:outputText value="#{bundle.ViewWardLabel_tname}"/>
-                    <h:outputText value="#{wardController.selected.tname}" title="#{bundle.ViewWardTitle_tname}"/>
-                    <h:outputText value="#{bundle.ViewWardLabel_ename}"/>
-                    <h:outputText value="#{wardController.selected.ename}" title="#{bundle.ViewWardTitle_ename}"/>
-                    <h:outputText value="#{bundle.ViewWardLabel_category}"/>
-                    <h:outputText value="#{wardController.selected.category}" title="#{bundle.ViewWardTitle_category}"/>
-                    <h:outputText value="#{bundle.ViewWardLabel_parent}"/>
-                    <h:outputText value="#{wardController.selected.parent}" title="#{bundle.ViewWardTitle_parent}"/>
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{wardController.destroyAndView}" value="#{bundle.ViewWardDestroyLink}"/>
-                <br />
-                <br />
-                <h:link outcome="Edit" value="#{bundle.ViewWardEditLink}"/>
-                <br />
-                <h:commandLink action="#{wardController.prepareCreate}" value="#{bundle.ViewWardCreateLink}" />
-                <br />
-                <h:commandLink action="#{wardController.prepareList}" value="#{bundle.ViewWardShowAllLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ViewWardIndexLink}"/>
+    <ui:composition>
 
+        <p:dialog id="WardViewDlg" widgetVar="WardViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewWardTitle}">
+            <h:form id="WardViewForm">
+                <h:panelGroup id="display">
+                    <p:panelGrid columns="2" rendered="#{wardController.selected != null}">
+                        <h:outputText value="#{bundle.ViewWardLabel_id}"/>
+                        <h:outputText value="#{wardController.selected.id}" title="#{bundle.ViewWardTitle_id}"/>
+                        <h:outputText value="#{bundle.ViewWardLabel_sname}"/>
+                        <h:outputText value="#{wardController.selected.sname}" title="#{bundle.ViewWardTitle_sname}"/>
+                        <h:outputText value="#{bundle.ViewWardLabel_tname}"/>
+                        <h:outputText value="#{wardController.selected.tname}" title="#{bundle.ViewWardTitle_tname}"/>
+                        <h:outputText value="#{bundle.ViewWardLabel_ename}"/>
+                        <h:outputText value="#{wardController.selected.ename}" title="#{bundle.ViewWardTitle_ename}"/>
+                        <h:outputText value="#{bundle.ViewWardLabel_category}"/>
+                        <h:outputText value="#{wardController.selected.category}" title="#{bundle.ViewWardTitle_category}"/>
+                        <h:outputText value="#{bundle.ViewWardLabel_parent}"/>
+                        <h:outputText value="#{wardController.selected.parent}" title="#{bundle.ViewWardTitle_parent}"/>
+                    </p:panelGrid>
+                    <p:commandButton value="#{bundle.Close}" onclick="WardViewDialog.hide()"/>
+                </h:panelGroup>
             </h:form>
-        </ui:define>
-    </ui:composition>
+        </p:dialog>
 
+    </ui:composition>
 </html>
